--- a/estilos.css
+++ b/estilos.css
@@ -596,8 +596,28 @@ background-repeat: no-repeat;
                                                             
                                                             
                                                             }
-                                                            
+ .textoins{
+text-align: justify;
+color: #020a20;
+font-size: 30px;
 
+
+ }                                                          
+.imageninfog{
+  background-repeat: no-repeat;
+                                                                
+  float:left;
+  
+  height: 200px;
+  
+  width: 260px;
+  
+  margin-left: 5px;
+  
+  margin-right:5px;
+  
+  background-image: url("imageninfog");
+}
 
                     
                     
