--- a/estilos.css
+++ b/estilos.css
@@ -625,6 +625,48 @@ background-repeat: no-repeat;
 
 
                                                             }
+                                                            .infografia.sociales{
+                                                              background-repeat: no-repeat;
+                                                                
+                                                              float:left;
+                                                              
+                                                              height: 200px;
+                                                              
+                                                              width: 260px;
+                                                              
+                                                              margin-left: 5px;
+                                                              
+                                                              margin-right:5px;
+                                                              
+                                                              background-image: url("infografia.sociales.png");
+                                                              
+
+
+
+
+
+                                                            }
+                                                            .imagenregla1{
+                                    
+                                     
+                                    
+                                                              background-repeat: no-repeat;
+                                                              
+                                                              float:left;
+                                                              
+                                                              height: 200px;
+                                                              
+                                                              width: 260px;
+                                                              
+                                                              margin-left: 5px;
+                                                              
+                                                              margin-right:5px;
+                                                              
+                                                              background-image: url("ingles_regla1.jpg");
+                                                              
+                                                              }
+                                                            
+                                                            
                                                             
                                                           
 
